--- a/composer.json
+++ b/composer.json
@@ -4,11 +4,6 @@
     "version": "1.0.3",
     "homepage": "https://github.com/acalvino4/craft-twigruleset",
     "license": "MIT",
-    "autoload": {
-        "psr-4": {
-            "Acalvino4\\CraftTwigRuleset\\": "src/"
-        }
-    },
     "authors": [
         {
             "name": "acalvino4"
@@ -20,6 +15,11 @@
     "require-dev": {
         "craftcms/ecs": "dev-main",
         "craftcms/phpstan": "dev-main"
+    },
+    "autoload": {
+        "psr-4": {
+            "acalvino4\\crafttwigruleset\\": "src/"
+        }
     },
     "scripts": {
         "test": "ecs check --ansi && phpstan --memory-limit=1G",
