standardize various files, change namespace

--- a/composer.json
+++ b/composer.json
@@ -1,30 +1,31 @@
 {
-    "name": "acalvino4/craft-twig-ruleset",
-    "description": "A twig coding style ruleset for the Craft community",
-    "version": "1.0.3",
-    "homepage": "https://github.com/acalvino4/craft-twigruleset",
-    "license": "MIT",
-    "authors": [
-        {
-            "name": "acalvino4"
-        }
-    ],
-    "require": {
-        "friendsoftwig/twigcs": "^6.2"
-    },
-    "require-dev": {
-        "craftcms/ecs": "dev-main",
-        "craftcms/phpstan": "dev-main"
-    },
-    "autoload": {
-        "psr-4": {
-            "acalvino4\\crafttwigruleset\\": "src/"
-        }
-    },
-    "scripts": {
-        "test": "ecs check --ansi && phpstan --memory-limit=1G",
-        "fix": "ecs check --ansi --fix"
-      },
-    "minimum-stability": "dev",
-    "prefer-stable": true
+  "name": "acalvino4/craft-twig-ruleset",
+  "description": "A twig coding style ruleset for the Craft community",
+  "version": "1.0.3",
+  "homepage": "https://github.com/acalvino4/craft-twigruleset",
+  "license": "MIT",
+  "authors": [
+    {
+      "name": "acalvino4",
+      "homepage": "https://github.com/acalvino4"
+    }
+  ],
+  "require": {
+    "friendsoftwig/twigcs": "^6.2"
+  },
+  "require-dev": {
+    "craftcms/ecs": "dev-main",
+    "craftcms/phpstan": "dev-main"
+  },
+  "autoload": {
+    "psr-4": {
+      "acalvino4\\crafttwigruleset\\": "src/"
+    }
+  },
+  "scripts": {
+    "test": "ecs check --ansi && phpstan --memory-limit=1G",
+    "fix": "ecs check --ansi --fix"
+  },
+  "minimum-stability": "dev",
+  "prefer-stable": true
 }
